VRT Project Updated with UM1 issue fixes

--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="78a366">  <td>19/11/25 20:09:03</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="assetHubTest.ASSTHB006b(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.vrt.testcases.assetHubTest@2173f6d9]">ASSTHB006b</td> 
-  <td>main@175408781</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>19/11/25 20:08:54</td>   <td>-9170</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;assetHubTest.AssetCreationSetup()[pri:0, instance:com.vrt.testcases.assetHubTest@2173f6d9]">&gt;&gt;AssetCreationSetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@175408781</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>19/11/25 20:08:55</td>   <td>-8390</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;assetHubTest.Setup()[pri:0, instance:com.vrt.testcases.assetHubTest@2173f6d9]">&gt;&gt;Setup</td> 
-<td>&nbsp;</td>  <td>main@175408781</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>19/11/25 20:09:26</td>   <td>23237</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;assetHubTest.Teardown(org.testng.ITestResult)[pri:0, instance:com.vrt.testcases.assetHubTest@2173f6d9]">&lt;&lt;Teardown</td> 
-<td>&nbsp;</td>  <td>main@175408781</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>19/11/25 20:09:26</td>   <td>23268</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;assetHubTest.endReport_releaseMomory()[pri:0, instance:com.vrt.testcases.assetHubTest@2173f6d9]">&lt;&lt;endReport_releaseMomory</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@175408781</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/07/16 02:02:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HitNTrialTests.ADMN067A(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.vrt.testcases.HitNTrialTests@69a3d1d]">ADMN067A</td> 
+  <td>main@209833425</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/07/16 02:03:19</td>   <td>40781</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HitNTrialTests.ADMN067B()[pri:0, instance:com.vrt.testcases.HitNTrialTests@69a3d1d]">ADMN067B</td> 
+  <td>main@209833425</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/07/16 02:02:27</td>   <td>-11091</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HitNTrialTests.Setup()[pri:0, instance:com.vrt.testcases.HitNTrialTests@69a3d1d]">&gt;&gt;Setup</td> 
+<td>&nbsp;</td>  <td>main@209833425</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/07/16 02:03:09</td>   <td>30769</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HitNTrialTests.Setup()[pri:0, instance:com.vrt.testcases.HitNTrialTests@69a3d1d]">&gt;&gt;Setup</td> 
+<td>&nbsp;</td>  <td>main@209833425</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/07/16 02:03:09</td>   <td>30684</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HitNTrialTests.Teardown(org.testng.ITestResult)[pri:0, instance:com.vrt.testcases.HitNTrialTests@69a3d1d]">&lt;&lt;Teardown</td> 
+<td>&nbsp;</td>  <td>main@209833425</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/07/16 02:03:29</td>   <td>50967</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HitNTrialTests.Teardown(org.testng.ITestResult)[pri:0, instance:com.vrt.testcases.HitNTrialTests@69a3d1d]">&lt;&lt;Teardown</td> 
+<td>&nbsp;</td>  <td>main@209833425</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/07/16 02:03:29</td>   <td>51075</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HitNTrialTests.endReport()[pri:0, instance:com.vrt.testcases.HitNTrialTests@69a3d1d]">&lt;&lt;endReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@209833425</td>   <td></td> </tr>
+<tr bgcolor="78a366">  <td>20/07/16 02:01:12</td>   <td>-86116</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HitNTrialTests.testsetup()[pri:0, instance:com.vrt.testcases.HitNTrialTests@69a3d1d]">&gt;&gt;testsetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@209833425</td>   <td></td> </tr>
 </table>
