--- a/test-output/old/UMRegressionSuite/classes.html
+++ b/test-output/old/UMRegressionSuite/classes.html
@@ -4,7 +4,375 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.vrt.testcases.UserPrivilegesTest</td>
+<td>com.vrt.testcases.UM4</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>ADMN065C</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>ADMN081D</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>ADMN081C</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>ADMN081B</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>ADMN081A</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>ADMN103C</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>ADMN103B</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>ADMN103A</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>ADMN065B</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>ADMN065A</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>ADMN103D</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>ADMN103</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>ADMN079</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>ADMN065</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>ADMN120</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>ADMN063</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>ADMN051</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>ADMN081</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>PreSetup</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>Setup</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>Teardown</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>endReport</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>com.vrt.testcases.UM3</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>CADMN29</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>CADMN27</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>CADMN1</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>CADMN28</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>CADMN2</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>CADMN25</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>CADMN26</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>CADMN23</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>CADMN5</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>CADMN6</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>CADMN24</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>CADMN21</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>ADMN058A</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>CADMN22</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>CADMN20</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>CADMN40</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>ADMN111A</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>ADMN058</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>ADMN112</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>ADMN111</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>CADMN7</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>CADMN8</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>CADMN9</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>CADMN19</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>CADMN38</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>CADMN16</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>CADMN39</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>ADMN085A</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>CADMN36</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>CADMN14</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>CADMN37</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>CADMN15</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>CADMN12</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>CADMN35</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>CADMN10</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>CADMN32</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>CADMN11</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>CADMN30</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>CADMN31</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>ADMN087</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>ADMN085</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>ADMN060</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>PreSetup</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>Setup</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>Teardown</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>endReport</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>com.vrt.testcases.UM2</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
@@ -51,17 +419,17 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN053</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
 <td>ADMN097</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>ADMN117A</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>ADMN053</td>
 <td>Regression </td>
 </tr>
 <tr>
@@ -76,12 +444,12 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN094</td>
+<td>ADMN050</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN050</td>
+<td>ADMN094</td>
 <td>Regression </td>
 </tr>
 <tr>
@@ -201,12 +569,12 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN074</td>
+<td>ADMN119B</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN119B</td>
+<td>ADMN074</td>
 <td>Regression </td>
 </tr>
 <tr>
@@ -278,241 +646,9 @@
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
-<td align='center' colspan='3'>@BeforeMethod</td>
-</tr>
-<tr>
 <td>&nbsp;</td>
-<td>Setup</td>
+<td>PreSetup</td>
 <td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@AfterMethod</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>Teardown</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@AfterClass</td>
-</tr>
-<tr>
-<td>com.vrt.testcases.UM_customized_UserPrivilagesTest</td>
-<td>&nbsp;</td><td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@Test</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>CADMN29</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>CADMN27</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>CADMN1</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>CADMN28</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>CADMN2</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>CADMN25</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>CADMN26</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>CADMN5</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>CADMN23</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>CADMN24</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>CADMN6</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>CADMN21</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ADMN058A</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>CADMN22</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>CADMN20</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>CADMN40</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ADMN111A</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ADMN058</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ADMN112</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ADMN111</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>CADMN7</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>CADMN8</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>CADMN9</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>CADMN19</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>CADMN16</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>CADMN38</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ADMN085A</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>CADMN39</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>CADMN36</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>CADMN14</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>CADMN37</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>CADMN15</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>CADMN12</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>CADMN35</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>CADMN10</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>CADMN32</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>CADMN11</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>CADMN30</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>CADMN31</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ADMN087</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ADMN085</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ADMN060</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeClass</td>
-</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
@@ -531,7 +667,11 @@
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
 <tr>
-<td>com.vrt.testcases.UserManagementTest</td>
+<td>&nbsp;</td>
+<td>endReport</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>com.vrt.testcases.UM1</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
@@ -698,12 +838,12 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN045A</td>
+<td>ADMN069C</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN069C</td>
+<td>ADMN045A</td>
 <td>Regression </td>
 </tr>
 <tr>
@@ -938,12 +1078,12 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN043</td>
+<td>ADMN039A</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN039A</td>
+<td>ADMN043</td>
 <td>Regression </td>
 </tr>
 <tr>
@@ -970,6 +1110,10 @@
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
+<td>&nbsp;</td>
+<td>PreSetup</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
 <tr>
@@ -987,119 +1131,7 @@
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
 <tr>
-<td>com.vrt.testcases.UM_DeleteStudyAndReportAcessTest</td>
-<td>&nbsp;</td><td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@Test</td>
-</tr>
-<tr>
 <td>&nbsp;</td>
-<td>ADMN065C</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ADMN081D</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ADMN081C</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ADMN081B</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ADMN081A</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ADMN103C</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ADMN103B</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ADMN103A</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ADMN065B</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ADMN065A</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ADMN103</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ADMN103D</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ADMN079</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ADMN120</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ADMN065</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ADMN063</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ADMN051</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ADMN081</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeClass</td>
-</tr>
-<tr>
-<td align='center' colspan='3'>@BeforeMethod</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>Setup</td>
+<td>endReport</td>
 <td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@AfterMethod</td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>Teardown</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td align='center' colspan='3'>@AfterClass</td>
-</tr>
 </table>
