--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,14 +4,19 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.vrt.testcases.assetHubTest</td>
+<td>com.vrt.testcases.HitNTrialTests</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ASSTHB006b</td>
+<td>ADMN067A</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>ADMN067B</td>
 <td>Regression </td>
 </tr>
 <tr>
@@ -19,7 +24,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>AssetCreationSetup</td>
+<td>testsetup</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
@@ -40,6 +45,6 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>endReport_releaseMomory</td>
+<td>endReport</td>
 <td>&nbsp;</td></tr>
 </table>
